--- a/public/tools/analytics-integrity-diagnosis/index.html
+++ b/public/tools/analytics-integrity-diagnosis/index.html
@@ -6,117 +6,39 @@
     <title>Analytics Integrity Diagnosis | Cybertect</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/internal-base.css">
     <style>
-        :root {
-            --blue: #007BFF;
-            --green: #00C853;
-            --yellow: #FFB800;
-            --red: #FF3D00;
-            --dark-gray: #1F2937;
-            --light-gray: #F8F9FA;
-            --text-dark: #111827;
-            --text-gray: #6B7280;
-            --white: #FFFFFF;
-            --border: #E5E7EB;
-        }
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Inter', sans-serif; background: var(--white); color: var(--text-dark); min-height: 100vh; }
-        .header {
-            background: var(--white);
-            padding: 16px 40px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            border-bottom: 1px solid var(--border);
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        }
-        .logo-container { display: flex; align-items: baseline; gap: 4px; font-size: 28px; font-weight: 600; letter-spacing: -0.5px; }
-        .cyber-text { color: var(--dark-gray); }
-        .tect-text { color: var(--blue); }
-        .com-text { color: var(--text-gray); font-size: 20px; }
-        .top-menu { display: flex; gap: 18px; margin: 0 32px; flex: 1; justify-content: center; flex-wrap: wrap; }
-        .tool-link { font-size: 14px; font-weight: 500; color: var(--text-gray); text-decoration: none; padding-bottom: 6px; border-bottom: 2px solid transparent; transition: color 0.2s, border-color 0.2s; }
-        .tool-link:hover { color: var(--text-dark); }
-        .tool-link.active { color: var(--blue); border-color: var(--blue); }
-        .nav-pill {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            font-size: 14px;
-            font-weight: 600;
-            color: var(--text-dark);
-            background: transparent;
-            border: 1px solid var(--border);
-            border-radius: 999px;
-            padding: 8px 18px;
-            cursor: pointer;
-            transition: background 0.2s, border-color 0.2s, box-shadow 0.2s;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.18);
-        }
-        .nav-pill:hover,
-        .nav-pill:focus-visible { background: var(--light-gray); border-color: var(--text-gray); }
-        .nav-pill-link { text-decoration: none; color: inherit; }
-        .nav-pill-link.active { border-color: var(--blue); color: var(--blue); }
-        .dropdown { position: relative; }
-        .dropdown-toggle {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            font-size: 14px;
-            font-weight: 600;
-            color: var(--text-dark);
-            background: transparent;
-            border: 1px solid var(--border);
-            border-radius: 999px;
-            padding: 8px 18px;
-            cursor: pointer;
-        }
-        .dropdown-toggle:hover,
-        .dropdown-toggle:focus-visible {
-            background: var(--light-gray);
-            border-color: var(--text-gray);
-        }
-        .dropdown-menu {
-            position: absolute;
-            top: calc(100% + 8px);
-            left: 0;
-            display: none;
-            flex-direction: column;
-            min-width: 260px;
-            padding: 12px;
-            border: 1px solid var(--border);
-            border-radius: 16px;
-            background: var(--white);
-            box-shadow: 0 20px 30px rgba(15,23,42,0.12);
-            z-index: 20;
-        }
-        .dropdown-menu.show { display: flex; }
-        .dropdown-menu .tool-link {
-            padding: 8px 12px;
-            border-bottom: none;
-            border-radius: 10px;
-        }
-        .dropdown-menu .tool-link:hover,
-        .dropdown-menu .tool-link.active {
-            background: var(--light-gray);
-            color: var(--text-dark);
-        }
-        .sign-in-btn { background: transparent; border: 1px solid var(--border); padding: 8px 20px; border-radius: 24px; color: var(--text-dark); font-weight: 500; cursor: pointer; }
         main { max-width: 960px; margin: 0 auto; padding: 60px 24px 120px; }
         .tool-hero { text-align: left; margin-bottom: 32px; }
         .eyebrow { text-transform: uppercase; letter-spacing: 2px; font-size: 12px; color: var(--text-gray); margin-bottom: 12px; }
-        h1 { font-size: 40px; margin-bottom: 12px; }
+        h1 { font-size: 40px; margin-bottom: 12px; color: var(--text-dark); }
         .subtitle { font-size: 18px; color: var(--text-gray); max-width: 720px; }
-        .panel { background: var(--light-gray); border: 1px solid var(--border); border-radius: 16px; padding: 32px; margin-bottom: 32px; box-shadow: 0 12px 30px rgba(15,23,42,0.08); }
+        .panel {
+            background: var(--light-gray);
+            border: 1px solid var(--border);
+            border-radius: 16px;
+            padding: 32px;
+            margin-bottom: 32px;
+            box-shadow: 0 12px 30px rgba(15,23,42,0.08);
+        }
         .panel h2 { font-size: 20px; margin-bottom: 16px; }
         .panel ul { list-style: disc; padding-left: 20px; color: var(--text-gray); }
         .panel li { margin-bottom: 10px; }
         .actions { display: flex; flex-direction: column; align-items: flex-start; gap: 8px; }
-        .run-btn { background: var(--blue); color: var(--white); padding: 14px 32px; border-radius: 999px; font-weight: 600; border: none; opacity: 0.5; cursor: not-allowed; }
+        .run-btn {
+            background: var(--blue);
+            color: var(--white);
+            padding: 14px 32px;
+            border-radius: 999px;
+            font-weight: 600;
+            border: none;
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
         .helper { font-size: 13px; color: var(--text-gray); }
         @media (max-width: 640px) {
-            .header { flex-direction: column; gap: 16px; }
-            .top-menu { margin: 12px 0; width: 100%; }
+            .header { flex-direction: column; align-items: flex-start; }
+            .top-menu { margin: 12px 0; width: 100%; justify-content: flex-start; }
             .dropdown { width: 100%; }
             .dropdown-toggle { width: 100%; justify-content: space-between; }
             .dropdown-menu { position: static; box-shadow: none; margin-top: 8px; width: 100%; }
@@ -127,7 +49,9 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <span class="cyber-text">cyber</span><span class="tect-text">tect</span><span class="com-text">.com</span>
+            <a href="/" class="cybertect-logo" aria-label="Cybertect home">
+                <span class="cyber-text">cyber</span><span class="tect-text">tect</span><span class="com-text">.com</span>
+            </a>
         </div>
         <nav class="top-menu">
             <a class="nav-pill nav-pill-link" href="/online-waste/" data-route="/online-waste">Online Waste</a>
