--- a/public/tools/analytics-integrity-diagnosis/index.html
+++ b/public/tools/analytics-integrity-diagnosis/index.html
@@ -437,7 +437,7 @@
             runBtn.innerHTML = '<span class="spinner"></span><span class="btn-text">Scanning...</span>';
 
             try {
-                const response = await fetch('http://localhost:3000/api/diagnose', {
+                const response = await fetch('/api/diagnose', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
